--- a/Pages/UserManagement/ECStaff/Add.cshtml
+++ b/Pages/UserManagement/ECStaff/Add.cshtml
@@ -71,9 +71,12 @@
 
             <!-- Birthdate -->
             <div class="row mb-1">
-                <label class="col-sm-4 col-form-label text-start" for="birthdate">Birthdate:<span class="text-danger" style="padding:5px">*</span></label>
+                <label class="col-sm-4 col-form-label text-start" for="birthdate">
+                    Birthdate:
+                    <span class="text-danger" style="padding:5px">*</span>
+                </label>
                 <div class="col-sm-8">
-                    <input type="date" id="birthdate" name="birthdate" class="form-control" required pattern="\d{4}-\d{2}-\d{2}" />
+                    <input type="date" id="birthdate" name="birthdate" class="form-control" required onkeydown="return false" max="@DateTime.Now.ToString("yyyy-MM-dd")" />
                 </div>
             </div>
 
