--- a/Pages/Disaster/Profile/staffassignment/Index.cshtml
+++ b/Pages/Disaster/Profile/staffassignment/Index.cshtml
@@ -136,9 +136,9 @@
 										</div>
 									</th>
 									<th>Name</th>
-									<th>Sex<br /></th>
-									<th>Role<br /></th>
-									<th style="text-align: center;">Status<br /></th>
+									<th>Sex</th>
+									<th>Role</th>
+									<th>Status</th>
 									<th></th>
 								</tr>
 							</thead>
@@ -154,9 +154,9 @@
 											</div>
 										</td>
 										<td width="35%">@item.fullName</td>
-										<td width="15%" style="text-align: center;">@item.sex</td>
-										<td width="20%" style="text-align: center;">@item.role</td>
-										<td width="20%" style="text-align: center;">
+										<td width="15%">@item.sex</td>
+										<td width="20%">@item.role</td>
+										<td width="20%">
 											@if (@item.status == "Assigned")
 											{
 												<span class="badge bg-success">@item.status</span>
@@ -367,37 +367,66 @@
 			]
 		});
 
-		// Adding filters to specific columns
 		table.columns([2, 3, 4]).every(function () {
 			var column = this;
-			var select = $('<select><option value=""></option></select>')
-				.appendTo($(column.header()))
-				.on('change', function () {
-					var val = $.fn.dataTable.util.escapeRegex(
-						$(this).val()
-					);
+			var filterContainer = $('<div class="dropdown align-items-center d-inline-flex ps-2"></div>').appendTo($(column.header()));
+			var btn = $('<button class="btn btn-sm btn-secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="bi bi-funnel"></i></button>').appendTo(filterContainer);
+			var menu = $('<div class="dropdown-menu p-3"></div>').appendTo(filterContainer);
 
-					column
-						.search(val ? '^' + val + '$' : '', true, false)
-						.draw();
-				});
+			function updateFilterButton() {
+				var hasActiveFilter = column.search() !== '';
+				btn.toggleClass('btn-warning', hasActiveFilter);
+			}
 
 			column.data().unique().sort().each(function (d, j) {
-				// Only add the options "Assigned" and "Completed" for the "Status" column
-				if (column.index() === 4) {
+				// Only add the options "Check-in" and "Check-out" for the "Status" column
+				if (column.index() === 5) {
 					// Set specific filter options only if they haven't been added
-					if (select.find("option[value='Assigned']").length == 0) {
-						select.append('<option value="Assigned">Assigned</option>');
+					if (menu.find("input[value='Assigned']").length === 0) {
+						menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="Assigned">' +
+							'<label class="form-check-label ps-1">Active</label></div>');
 					}
-					if (select.find("option[value='Completed']").length == 0) {
-						select.append('<option value="Completed">Completed</option>');
+					if (menu.find("input[value='Completed']").length === 0) {
+						menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="Completed">' +
+							'<label class="form-check-label ps-1">Inactive</label></div>');
 					}
-				} 
+				}
+
 				// For other columns, show all unique values as filter options
 				else {
-					select.append('<option value="' + d + '">' + d + '</option>');
+					menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="' + d + '">' +
+						'<label class="form-check-label ps-1">' + d + '</label></div>');
 				}
 			});
+
+
+			menu.prepend('<div class="form-check"><input class="form-check-input select-all" type="checkbox" value="select-all">' +
+				'<label class="form-check-label ps-1">Select All</label></div>');
+
+			menu.append('<hr class="dropdown-divider"><div class="p-1"><button type="button" class="btn btn-sm btn-light clear-filter"><i class="bi bi-eraser pe-1"></i>Clear Filter</button></div>');
+
+			menu.find('.form-check-input, .clear-filter').on('click', function () {
+				var checked = $(this).prop('checked');
+
+				if ($(this).hasClass('form-check-input')) {
+					if ($(this).val() === 'select-all') {
+						menu.find('.form-check-input').prop('checked', checked);
+					} else if (!checked) {
+						menu.find('.form-check-input[value="select-all"]').prop('checked', false);
+					}
+				} else {
+					menu.find('.form-check-input').prop('checked', false);
+					menu.find('.form-check-input[value="select-all"]').prop('checked', false);
+				}
+
+				var selectedValues = menu.find('.form-check-input:checked').map(function () {
+					return $(this).val();
+				}).get();
+
+				column.search(selectedValues.length > 0 ? '^(' + selectedValues.join('|') + ')$' : '', true, false).draw();
+				updateFilterButton();
+			});
+			updateFilterButton();
 		});
 	});
 </script>
