Added filters on Staff Assignment page.

--- a/Pages/Disaster/Profile/staffassignment/Index.cshtml
+++ b/Pages/Disaster/Profile/staffassignment/Index.cshtml
@@ -384,11 +384,11 @@
 					// Set specific filter options only if they haven't been added
 					if (menu.find("input[value='Assigned']").length === 0) {
 						menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="Assigned">' +
-							'<label class="form-check-label ps-1">Active</label></div>');
+							'<label class="form-check-label ps-1">Assigned</label></div>');
 					}
 					if (menu.find("input[value='Completed']").length === 0) {
 						menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="Completed">' +
-							'<label class="form-check-label ps-1">Inactive</label></div>');
+							'<label class="form-check-label ps-1">Completed</label></div>');
 					}
 				}
 
