--- a/Pages/disaster/profile/staffassignment/Index.cshtml
+++ b/Pages/disaster/profile/staffassignment/Index.cshtml
@@ -48,42 +48,42 @@
 	<input type="hidden" name="centerLogID" value="@Model.logInfo.centerLogID" />
 	<div class="row">
 		<!-- Sidebar (desktop) -->
-        <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block d-none sidebar">
-            <div class="position-sticky">
-                <ul class="nav flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/disaster/profile/informationboard/index?centerLogID=@Model.logInfo.centerLogID">Information Board</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/disaster/profile/entrylog/index?centerLogID=@Model.logInfo.centerLogID">Entry Log</a>
-                    </li>
-                    <li class="nav-item">
+		<nav id="sidebar" class="col-md-3 col-lg-2 d-md-block d-none sidebar">
+			<div class="position-sticky">
+				<ul class="nav flex-column">
+					<li class="nav-item">
+						<a class="nav-link" href="/disaster/profile/informationboard/index?centerLogID=@Model.logInfo.centerLogID">Information Board</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/disaster/profile/entrylog/index?centerLogID=@Model.logInfo.centerLogID">Entry Log</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link active" href="/disaster/profile/staffassignment/index?centerLogID=@Model.logInfo.centerLogID">Staff Assignment</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">Inventory</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">Relief Goods Pack</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/disaster/profile/vulnerabilityassessment/index?centerLogID=@Model.logInfo.centerLogID">Vulnerability Assessment</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">Inventory</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">Relief Goods Pack</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/disaster/profile/vulnerabilityassessment/index?centerLogID=@Model.logInfo.centerLogID">Vulnerability Assessment</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
 
-        <!-- Sidebar (mobile) -->
-        <div id="sidebarMobile" class="col-md-3 col-lg-2 d-md-none bg-light p-2">
-            <select class="form-select" id="pageSelect">
-                <option value="/disaster/profile/informationboard/index?centerLogID=@Model.logInfo.centerLogID">Information Board</option>
-                <option value="/disaster/profile/entrylog/index?centerLogID=@Model.logInfo.centerLogID">Entry Log</option>
-                <option value="/disaster/profile/staffassignment/index?centerLogID=@Model.logInfo.centerLogID">Staff Assignment</option>
-                <option value="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">Inventory</option>
-                <option value="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">Relief Goods Pack</option>
-                <option value="/disaster/profile/vulnerabilityassessment/index?centerLogID=@Model.logInfo.centerLogID">Vulnerability Assessment</option>
-            </select>
-        </div>
+		<!-- Sidebar (mobile) -->
+		<div id="sidebarMobile" class="col-md-3 col-lg-2 d-md-none bg-light p-2">
+			<select class="form-select" id="pageSelect">
+				<option value="/disaster/profile/informationboard/index?centerLogID=@Model.logInfo.centerLogID">Information Board</option>
+				<option value="/disaster/profile/entrylog/index?centerLogID=@Model.logInfo.centerLogID">Entry Log</option>
+				<option value="/disaster/profile/staffassignment/index?centerLogID=@Model.logInfo.centerLogID">Staff Assignment</option>
+				<option value="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">Inventory</option>
+				<option value="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">Relief Goods Pack</option>
+				<option value="/disaster/profile/vulnerabilityassessment/index?centerLogID=@Model.logInfo.centerLogID">Vulnerability Assessment</option>
+			</select>
+		</div>
 
 		<!-- Page Content -->
 		<div class="col-md-9 ms-sm-auto col-lg-10 px-md-4 pb-3 pt-3">
@@ -136,9 +136,9 @@
 										</div>
 									</th>
 									<th>Name</th>
-									<th>Sex<br /></th>
-									<th>Role<br /></th>
-									<th style="text-align: center;">Status<br /></th>
+									<th>Sex</th>
+									<th>Role</th>
+									<th>Status</th>
 									<th></th>
 								</tr>
 							</thead>
@@ -154,9 +154,9 @@
 											</div>
 										</td>
 										<td width="35%">@item.fullName</td>
-										<td width="15%" style="text-align: center;">@item.sex</td>
-										<td width="20%" style="text-align: center;">@item.role</td>
-										<td width="20%" style="text-align: center;">
+										<td width="15%">@item.sex</td>
+										<td width="20%">@item.role</td>
+										<td width="20%">
 											@if (@item.status == "Assigned")
 											{
 												<span class="badge bg-success">@item.status</span>
@@ -263,28 +263,28 @@
 			<div class="modal-body">
 				<table>
 					<tr>
-						<th class= "text-start pe-4">Name</th>
-						<td id="fullName" class= "text-start"></td>
+						<th class="text-start pe-4">Name</th>
+						<td id="fullName" class="text-start"></td>
 					</tr>
 					<tr>
-						<th class= "text-start pe-4">Sex</th>
-						<td id="sex" class= "text-start"></td>
+						<th class="text-start pe-4">Sex</th>
+						<td id="sex" class="text-start"></td>
 					</tr>
 					<tr>
-						<th class= "text-start pe-4">Age</th>
-						<td id="age" class= "text-start"></td>
+						<th class="text-start pe-4">Age</th>
+						<td id="age" class="text-start"></td>
 					</tr>
 					<tr>
-						<th class= "text-start pe-4">Birthdate</th>
-						<td id="birthdate" class= "text-start"></td>
+						<th class="text-start pe-4">Birthdate</th>
+						<td id="birthdate" class="text-start"></td>
 					</tr>
 					<tr>
-						<th class= "text-start pe-4">Mobile Number</th>
-						<td id="mobileNum" class= "text-start"></td>
+						<th class="text-start pe-4">Mobile Number</th>
+						<td id="mobileNum" class="text-start"></td>
 					</tr>
 					<tr>
-						<th class= "text-start pe-4">Email Address</th>
-						<td id="emailAddress" class= "text-start"></td>
+						<th class="text-start pe-4">Email Address</th>
+						<td id="emailAddress" class="text-start"></td>
 					</tr>
 				</table>
 			</div>
@@ -367,37 +367,66 @@
 			]
 		});
 
-		// Adding filters to specific columns
 		table.columns([2, 3, 4]).every(function () {
 			var column = this;
-			var select = $('<select><option value=""></option></select>')
-				.appendTo($(column.header()))
-				.on('change', function () {
-					var val = $.fn.dataTable.util.escapeRegex(
-						$(this).val()
-					);
+			var filterContainer = $('<div class="dropdown align-items-center d-inline-flex ps-2"></div>').appendTo($(column.header()));
+			var btn = $('<button class="btn btn-sm btn-secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="bi bi-funnel"></i></button>').appendTo(filterContainer);
+			var menu = $('<div class="dropdown-menu p-3"></div>').appendTo(filterContainer);
 
-					column
-						.search(val ? '^' + val + '$' : '', true, false)
-						.draw();
-				});
+			function updateFilterButton() {
+				var hasActiveFilter = column.search() !== '';
+				btn.toggleClass('btn-warning', hasActiveFilter);
+			}
 
 			column.data().unique().sort().each(function (d, j) {
-				// Only add the options "Assigned" and "Completed" for the "Status" column
-				if (column.index() === 4) {
+				// Only add the options "Check-in" and "Check-out" for the "Status" column
+				if (column.index() === 5) {
 					// Set specific filter options only if they haven't been added
-					if (select.find("option[value='Assigned']").length == 0) {
-						select.append('<option value="Assigned">Assigned</option>');
+					if (menu.find("input[value='Assigned']").length === 0) {
+						menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="Assigned">' +
+							'<label class="form-check-label ps-1">Assigned</label></div>');
 					}
-					if (select.find("option[value='Completed']").length == 0) {
-						select.append('<option value="Completed">Completed</option>');
+					if (menu.find("input[value='Completed']").length === 0) {
+						menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="Completed">' +
+							'<label class="form-check-label ps-1">Completed</label></div>');
 					}
-				} 
+				}
+
 				// For other columns, show all unique values as filter options
 				else {
-					select.append('<option value="' + d + '">' + d + '</option>');
+					menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="' + d + '">' +
+						'<label class="form-check-label ps-1">' + d + '</label></div>');
 				}
 			});
+
+
+			menu.prepend('<div class="form-check"><input class="form-check-input select-all" type="checkbox" value="select-all">' +
+				'<label class="form-check-label ps-1">Select All</label></div>');
+
+			menu.append('<hr class="dropdown-divider"><div class="p-1"><button type="button" class="btn btn-sm btn-light clear-filter"><i class="bi bi-eraser pe-1"></i>Clear Filter</button></div>');
+
+			menu.find('.form-check-input, .clear-filter').on('click', function () {
+				var checked = $(this).prop('checked');
+
+				if ($(this).hasClass('form-check-input')) {
+					if ($(this).val() === 'select-all') {
+						menu.find('.form-check-input').prop('checked', checked);
+					} else if (!checked) {
+						menu.find('.form-check-input[value="select-all"]').prop('checked', false);
+					}
+				} else {
+					menu.find('.form-check-input').prop('checked', false);
+					menu.find('.form-check-input[value="select-all"]').prop('checked', false);
+				}
+
+				var selectedValues = menu.find('.form-check-input:checked').map(function () {
+					return $(this).val();
+				}).get();
+
+				column.search(selectedValues.length > 0 ? '^(' + selectedValues.join('|') + ')$' : '', true, false).draw();
+				updateFilterButton();
+			});
+			updateFilterButton();
 		});
 	});
 </script>
