Added filter on Assign Staff page.

--- a/Pages/disaster/profile/staffassignment/Add.cshtml
+++ b/Pages/disaster/profile/staffassignment/Add.cshtml
@@ -24,68 +24,66 @@
 	</div>
 }
 
-<div class="container p-2 form-container">
-    <div class="container mt-4 form-container-content">
-        <div class="row">
-            <div class="col text-center">
-                <h1>Assign Staff</h1>
-            </div>
-        </div>
-        <form method="POST" id="assignment">
-            <input type="hidden" name="centerLogID" value="@Model.logInfo.centerLogID" />
-            <div class="row pt-4">
-                <div class="col-lg-12">
-                    <table id="entrylog-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
-                        <thead>
+<div class="bg-light rounded px-2 py-0 my-3">
+    <form method="POST" id="assignment">
+        <h1 class="display-5 fw-bold text-center">Assign Staff</h1>
+        <br />
+
+        <input type="hidden" name="centerLogID" value="@Model.logInfo.centerLogID" />
+        <div class="row pt-4">
+            <div class="col-lg-12">
+                <table id="entrylog-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="selectAllCheckboxes">
+                                    <label class="form-check-label"></label>
+                                </div>
+                            </th>
+                            <th>Name</th>
+                            <th>Sex</th>
+                            <th>Birthdate</th>
+                            <th>Assign a Role</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model.listAvailable)
+                        {
                             <tr>
-                                <th>
+                                <td width="5%">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" id="selectAllCheckboxes">
+                                        <input class="form-check-input" type="checkbox" value="@item.ecStaffID" name="selectedStaff[]">
                                         <label class="form-check-label"></label>
                                     </div>
-                                </th>
-                                <th>Name</th>
-                                <th style="text-align: center;">Sex</th>
-                                <th style="text-align: center;">Birthdate</th>
-                                <th>Assign a Role</th>
+                                </td>
+                                <td width="25%">@item.fullName</td>
+                                <td width="15%">@item.sex</td>
+                                <td width="25%">@item.birthdate</td>
+                                <td>
+                                    <select class="form-select role-select" name="role[]" required disabled>
+                                        <option value="" selected disabled>Select a role</option>
+                                        <option value="Manager">Manager</option>
+                                        <option value="Asst. Manager">Asst. Manager</option>
+                                        <option value="Staff">Staff</option>
+                                    </select>
+                                </td>
                             </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var item in Model.listAvailable)
-                            {
-                                <tr>
-                                    <td width="5%">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="@item.ecStaffID" name="selectedStaff[]">
-                                            <label class="form-check-label"></label>
-                                        </div>
-                                    </td>
-                                    <td width="25%">@item.fullName</td>
-                                    <td width="15%" style="text-align: center;">@item.sex</td>
-                                    <td width="25%" style="text-align: center;">@item.birthdate</td>
-                                    <td>
-                                        <select class="form-select role-select" name="role[]" required disabled>
-                                            <option value="" selected disabled>Select a role</option>
-                                            <option value="Manager">Manager</option>
-                                            <option value="Asst. Manager">Asst. Manager</option>
-                                            <option value="Staff">Staff</option>
-                                        </select>
-                                    </td>
-                                </tr>
 
-                            }
-                        </tbody>
-                    </table>
+                        }
+                    </tbody>
+                </table>
 
-                    <!-- Cancel and Assign Buttons -->
-                    <div class="button-spacer">
-                        <a class="btn btn-outline-secondary mr-10" href="/disaster/profile/staffassignment/index?centerLogID=@Model.logInfo.centerLogID">Cancel</a>
-                        <button type="button" class="btn btn-primary" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>Assign</button>
-                    </div>
+                <!-- Cancel and Save Selection Button -->
+                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                    <a href="/disaster/profile/staffassignment/index?centerLogID=@Model.logInfo.centerLogID" role="button" class="btn btn-outline-secondary px-4 gap-3">Cancel</a>
+                    <button type="button" class="btn btn-primary px-4" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>
+                        Assign
+                    </button>
                 </div>
             </div>
-        </form>
-    </div>
+        </div>
+    </form>
 </div>
 
 <!-- Modal: Confirm Assignment -->
@@ -180,24 +178,49 @@
             order: [[1, 'asc']]
         });
 
-        // Adding filters to specific columns
         table.columns([2]).every(function () {
             var column = this;
-            var select = $('<select><option value=""></option></select>')
-                .appendTo($(column.header()))
-                .on('change', function () {
-                    var val = $.fn.dataTable.util.escapeRegex(
-                        $(this).val()
-                    );
+            var filterContainer = $('<div class="dropdown align-items-center d-inline-flex ps-2"></div>').appendTo($(column.header()));
+            var btn = $('<button class="btn btn-sm btn-secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="bi bi-funnel"></i></button>').appendTo(filterContainer);
+            var menu = $('<div class="dropdown-menu p-3"></div>').appendTo(filterContainer);
 
-                    column
-                        .search(val ? '^' + val + '$' : '', true, false)
-                        .draw();
-                });
+            function updateFilterButton() {
+                var hasActiveFilter = column.search() !== '';
+                btn.toggleClass('btn-warning', hasActiveFilter);
+            }
 
             column.data().unique().sort().each(function (d, j) {
-                select.append('<option value="' + d + '">' + d + '</option>');
+                menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="' + d + '">' +
+                    '<label class="form-check-label ps-1">' + d + '</label></div>');
             });
+
+            menu.prepend('<div class="form-check"><input class="form-check-input select-all" type="checkbox" value="select-all">' +
+                '<label class="form-check-label ps-1">Select All</label></div>');
+
+            menu.append('<hr class="dropdown-divider"><div class="p-1"><button type="button" class="btn btn-sm btn-light clear-filter"><i class="bi bi-eraser pe-1"></i>Clear Filter</button></div>');
+
+            menu.find('.form-check-input, .clear-filter').on('click', function () {
+                var checked = $(this).prop('checked');
+
+                if ($(this).hasClass('form-check-input')) {
+                    if ($(this).val() === 'select-all') {
+                        menu.find('.form-check-input').prop('checked', checked);
+                    } else if (!checked) {
+                        menu.find('.form-check-input[value="select-all"]').prop('checked', false);
+                    }
+                } else {
+                    menu.find('.form-check-input').prop('checked', false);
+                    menu.find('.form-check-input[value="select-all"]').prop('checked', false);
+                }
+
+                var selectedValues = menu.find('.form-check-input:checked').map(function () {
+                    return $(this).val();
+                }).get();
+
+                column.search(selectedValues.length > 0 ? '^(' + selectedValues.join('|') + ')$' : '', true, false).draw();
+                updateFilterButton();
+            });
+            updateFilterButton();
         });
     });
 </script>
