--- a/Pages/family/add/Member.cshtml
+++ b/Pages/family/add/Member.cshtml
@@ -3,3 +3,288 @@
 @{
 	ViewData["Title"] = "Add Family Member";
 }
+
+<!-- Alert Banners -->
+@if (!string.IsNullOrEmpty(Model.errorMessage))
+{
+	<div class="position-fixed top-0 end-0 p-3" style="z-index: 1000;">
+		<div class="alert alert-warning alert-dismissible fade show" role="alert">
+			<strong>Error: @Model.errorMessage</strong>
+			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		</div>
+	</div>
+}
+
+@if (!string.IsNullOrEmpty(Request.Query["errorMessage"]))
+{
+	<div class="position-fixed top-0 end-0 p-3" style="z-index: 1000;">
+		<div class="alert alert-warning alert-dismissible fade show" role="alert">
+			<strong>Error: @Request.Query["errorMessage"]</strong>
+			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		</div>
+	</div>
+}
+
+<style>
+	.radioAlign:nth-child(1) {
+		display: block;
+		width: 100%;
+		clear: both;
+	}
+
+	.radioAlign {
+		width: 50%;
+		display: block;
+		float: left;
+	}
+
+	.radio1x2:nth-child(1) {
+		display: block;
+		width: 100%;
+		clear: both;
+	}
+
+	.radio1x2 {
+		width: 50%;
+		display: block;
+		float: left;
+	}
+</style>
+
+<div class="container p-2 form-container">
+	<div class="container mt-4" id="disaster-form-container">
+		<div class="row pt-4">
+			<div class="col text-center">
+				<h1>Add Family</h1>
+				<h5>Family Member</h5>
+			</div>
+		</div>
+
+		<div class="row pt-4">
+			<form method="POST" id="add-family">
+				<input type="hidden" asp-for="familyID" />
+				<div class="row mb-3">
+					<p class="text-danger text-end">* Required field</p>
+				</div>
+
+				<div class="row">
+					<!-- First Name -->
+					<div class="col-md-3">
+						<div class="mb-3">
+							<label class="form-label">
+								First Name:
+								<span class="text-danger" style="padding: 5px">*</span>
+							</label>
+							<input type="text" class="form-control" name="firstName" value="@Model.memberInfo.firstName" required maxlength="65" />
+						</div>
+					</div>
+
+					<!-- Middle Name -->
+					<div class="col-md-3">
+						<div class="mb-3">
+							<label class="form-label">
+								Middle Name:
+							</label>
+							<input type="text" class="form-control" name="middleName" value="@Model.memberInfo.middleName" maxlength="65" />
+						</div>
+					</div>
+
+					<!-- Last Name -->
+					<div class="col-md-3">
+						<div class="mb-3">
+							<label class="form-label">
+								Last Name:
+								<span class="text-danger" style="padding: 5px">*</span>
+							</label>
+							<input type="text" class="form-control" name="lastName" value="@Model.memberInfo.lastName" required maxlength="65" />
+						</div>
+					</div>
+
+					<!-- Extension Name -->
+					<div class="col-md-3">
+						<div class="mb-3">
+							<label class="form-label">
+								Extension Name:
+							</label>
+							<input type="text" class="form-control" name="extName" value="@Model.memberInfo.extName" maxlength="45" />
+						</div>
+					</div>
+				</div>
+
+				<div class="row mt-3">
+					<!-- Sex -->
+					<div class="col-md-3">
+						<div class="mb-3">
+							<label class="form-label radio1x2">
+								Sex:
+								<span class="text-danger" style="padding: 5px">*</span>
+							</label>
+							<select class="form-select" name="sex" required>
+								<option value="" selected disabled>Select Sex</option>
+								<option value="M">Male</option>
+								<option value="F">Female</option>
+							</select>
+						</div>
+					</div>
+
+					<!-- Birthdate -->
+					<div class="col-md-3">
+						<div class="mb-3">
+							<label class="form-label">
+								Birthdate:
+								<span class="text-danger" style="padding: 5px">*</span>
+							</label>
+							<input type="date" class="form-control text-muted" name="birthdate"
+								   value="@Model.memberInfo.birthdate" required onkeydown="return false" max="@DateTime.Now.ToString("yyyy-MM-dd")">
+						</div>
+					</div>
+
+					<!-- Civil Status -->
+					<div class="col-md-3">
+						<div class="mb-3">
+							<label class="form-label">
+								Civil Status:
+								<span class="text-danger" style="padding: 5px">*</span>
+							</label>
+							<select class="form-select" name="civilStatus" required>
+								<option value="" selected disabled>Select Civil Status</option>
+								<option value="Single">Single</option>
+								<option value="Married">Married</option>
+								<option value="Widowed">Widowed</option>
+								<option value="Annulled">Annulled</option>
+							</select>
+						</div>
+					</div>
+
+					<!-- Indigenous Person -->
+					<div class="col-md-3">
+						<div class="mb-3">
+							<label class="form-label">
+								Is Indigenous Person?
+								<span class="text-danger" style="padding: 5px">*</span>
+							</label>
+							<select class="form-select" name="isIndigenousPerson" required>
+								<option value="" selected disabled>Select</option>
+								<option value="Yes">Yes</option>
+								<option value="No">No</option>
+							</select>
+						</div>
+					</div>
+				</div>
+
+				<div class="row mt-3">
+					<!-- Religion -->
+					<div class="col-md-6">
+						<div class="mb-3">
+							<label class="form-label">
+								Religion:
+								<span class="text-danger" style="padding: 5px">*</span>
+							</label>
+							<input type="text" class="form-control" name="religion" value="@Model.memberInfo.religion" maxlength="45" />
+						</div>
+					</div>
+
+					<!-- Health Condition -->
+					<div class="col-md-6">
+						<div class="mb-3">
+							<label class="form-label">
+								Health Condition:
+							</label>
+							<input type="text" class="form-control" name="healthCondition" value="@Model.memberInfo.healthCondition" maxlength="45" />
+						</div>
+					</div>
+				</div>
+
+				<div class="row mt-3">
+					<!-- Education -->
+					<div class="col-md-6">
+						<div class="mb-3">
+							<label class="form-label">
+								Education:
+								<span class="text-danger" style="padding: 5px">*</span>
+							</label>
+							<input type="text" class="form-control" name="education" value="@Model.memberInfo.education" required maxlength="45" />
+						</div>
+					</div>
+
+					<!-- Occupation -->
+					<div class="col-md-6">
+						<div class="mb-3">
+							<label class="form-label">
+								Occupation:
+								<span class="text-danger" style="padding: 5px">*</span>
+							</label>
+							<input type="text" class="form-control" name="occupation" value="@Model.memberInfo.occupation" required maxlength="45" />
+						</div>
+					</div>
+				</div>
+
+				<div class="row">
+					<!-- Remarks -->
+					<div class="mb-3">
+						<label class="form-label">
+							Remarks:
+						</label>
+						<textarea class="form-control" name="remarks" value="@Model.memberInfo.remarks" rows="3"></textarea>
+					</div>
+				</div>
+
+				<!-- Cancel and Next Button -->
+				<div class="button-spacer">
+					<a class="btn btn-outline-secondary mr-10" href="/family/index" role="button">Cancel</a>
+					<button type="button" id="submitBtn" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#confirmationModal">Add</button>
+				</div>
+				<input type="hidden" name="redirectType" id="redirectType" value="" />
+			</form>
+		</div>
+	</div>
+</div>
+
+<!-- Modal: Add Family Member -->
+<div class="modal" id="confirmationModal" tabindex="-1">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">Add Family Member</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				Do you want to add another family member to this family?
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-primary" id="noButton">No</button>
+				<button type="button" class="btn btn-primary" id="yesButton">Yes</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- Enable/disable "Submit" button -->
+<script>
+	const submitButton = document.getElementById('submitBtn');
+	const form = document.querySelector('form');
+
+	submitButton.disabled = true;
+
+	function checkFormValidity() {
+		if (form.checkValidity()) {
+			submitButton.disabled = false;
+		} else {
+			submitButton.disabled = true;
+		}
+	}
+
+	form.addEventListener('input', checkFormValidity);
+</script>
+
+<!-- Save Changes -->
+<script>
+	document.getElementById('noButton').addEventListener('click', function () {
+		document.getElementById('add-family').submit();
+	});
+
+	document.getElementById('yesButton').addEventListener('click', function () {
+		document.getElementById('redirectType').value = 'add';
+		document.getElementById('add-family').submit();
+	});
+</script>
