--- a/Pages/Family/Index.cshtml
+++ b/Pages/Family/Index.cshtml
@@ -100,7 +100,7 @@
 					<tr style="vertical-align: top;">
 						<th>#</th>
 						<th>Serial Number</th>
-						<th>Street Address</th>
+						<th>Name of Family Head</th>
 						<th>Barangay</th>
 						<th>City/Municipality</th>
 						<th style="text-align: center;">Family Size</th>
@@ -115,11 +115,11 @@
 						<tr>
 							<td width="5%">@counter</td>
 							<td width="20%">@item.serialNum</td>
-							<td width="20%">@item.streetAddress</td>
+							<td width="25%">@item.familyHead</td>
 							<td width="15%">@item.barangayName</td>
 							<td width="20%">@item.municipalityCity</td>
-							<td width="10%" style="text-align: center;">@item.familySize</td>
-							<td width="10%">
+							<td width="5%" style="text-align: center;">@item.familySize</td>
+							<td width="5%">
 								<!-- View button -->
 								<a class="btn btn-success edit-button" href="/family/profile/index?familyID=@item.familyID">
 									View
