--- a/Pages/EvacuationCenter/Profile.cshtml
+++ b/Pages/EvacuationCenter/Profile.cshtml
@@ -108,7 +108,7 @@
 				}
 				else
 				{
-					<text>N/A</text>
+					<text>-</text>
 				}
 			</li>
 
@@ -121,7 +121,7 @@
 				}
 				else
 				{
-					<text>N/A</text>
+					<text>-</text>
 				}
 			</li>
 
