--- a/Pages/Disaster/Profile/informationboard/Index.cshtml
+++ b/Pages/Disaster/Profile/informationboard/Index.cshtml
@@ -129,7 +129,7 @@
                                 else
                                 {
                                     <b>Mobile Number</b><br />
-                                    <text>N/A</text>
+                                    <text>-</text>
                                 }
                             </p>
                             <p>
@@ -142,7 +142,7 @@
                                 else
                                 {
                                     <b>Telephone Number</b><br />
-                                    <text>N/A</text>
+                                    <text>-</text>
                                 }
                             </p>
                             <p>
@@ -159,7 +159,7 @@
                                 else
                                 {
                                     <b>Closing Date</b><br />
-                                    <text>N/A</text>
+                                    <text>-</text>
                                 }
                             </p>
                         </div>
